@@ -17,7 +17,11 @@ oprofileInit.error.statusMessage=An error occurred initializing OProfile for use
 oprofileInit.error.dialog.title=Error initializing OProfile
 oprofileInit.error.dialog.message=FATAL: The OProfile kernel module could not be loaded.
 
+opcontrol.error.log.stderr=opcontrol process error output
+opcontrol.error.log.stdout=opcontrol process output
+
 opcontrolRun.error.statusMessage=Error during run of opcontrol
+opcontrolNonZeroExitCodeExtraInfo.error.statusMessage=Exit code of opcontrol indicates failure.\nLook for additional information in the Error Log.
 opcontrolNonZeroExitCode.error.statusMessage=Exit code of opcontrol indicates failure.\nIf this system does not have /usr/bin/consolehelper, make sure you have added\nthe following line to /etc/sudoers:\n<username> ALL=(ALL) NOPASSWD: <path to opcontrol, e.g. /usr/bin/opcontrol>
 opcontrolNmiWatchdog.error.statusMessage=Error: counter 0 not available\nnmi_watchdog using this resource?\nTry:\nopcontrol --deinit\necho 0 > /proc/sys/kernel/nmi_watchdog\nin a Terminal. Then try profiling your binary again.
 
